# claude-skills-buying-analysts

./: .gitignore  SKILL.md  pyproject.toml  setup.sh
checks/: check_01_dealpoints.py  check_02_n3_future.py  check_03_ppt_start_week.py  check_04_dates_extension.py  check_05_l4l_coverage.py  check_07_deck_selection.py  check_08_ppt_continuity.py  check_09_current_week.py  check_14_competitor_names.py  check_16_n3_stability.py  check_17_deal_target.py
core/: data_manager.py  report.py
nt-slides-check/: SKILL.md  audit.py  pyproject.toml
nt-slides-check/checks/: __init__.py  check_01_dealpoints.py  check_02_n3_future.py  check_03_ppt_start_week.py  check_04_dates_extension.py  check_06_benchmark_count.py  check_08_ppt_continuity.py  check_10_current_week_dp.py  check_11_ppt_header.py  check_12_l2_overview.py  check_13_benchmark_name.py  check_15_competitive_section.py  check_16_n3_stability.py  check_18_deal_ly.py  check_19_deal_column.py  check_20_payment_days.py  check_21_competitiveness_data.py  check_22_ltm_fixed_dates.py  check_23_l2_l3_category.py  check_24_new_listing_names.py  check_25_new_listing_selling_price.py  check_26_offer_week_staleness.py  check_27_ah_promo_loaded.py  check_28_l4l_start_week.py  check_29_l4l_row_guard.py  check_30_article_name_length.py
nt-slides-check/core/: check_template.py  constants.py  data_manager.py  write_queue.py
